<?xml version="1.0" encoding="utf-8"?>
<resources>

    // app info
    <string name="app_name">FinU</string>
    <string name="settings">Settings</string>
    <string name="app_faq">FAQ</string>
    <string name="app_about">About</string>
    <string name="transaction_categories">Categories</string>



    // actions
    <string name="new_account">New account</string>
    <string name="pay_all_debt">Pay whole debt</string>
    <string name="pay_part_debt">Pay part of debt</string>
    <string name="take_more_debt">Increase debt amount</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="got_it">Got it</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="later">Later</string>
    <string name="confirm">Confirm</string>


    <string name="export_db">Backup data</string>
    <string name="import_db">Import data</string>
    <string name="export_db_summary">Click to backup data</string>
    <string name="import_db_summary">Click to import data</string>

    <string name="import_complete">Import complete!</string>
    <string name="import_error">Something went wrong. Try again later</string>
    <string name="import_wrong_file_type">Wrong file type. Try another one</string>
    <string name="import_no_file_explorer">You have no one file explorer!</string>
    <string name="import_dialog_warning">Are You sure? Your current data will be overwritten!</string>


    <string name="view_more">View more</string>

    <string name="update_rates_automatically">Update rates automatically</string>



    // tabs
    <string name="tab_transactions">Transactions</string>
    <string name="tab_accounts">Accounts</string>
    <string name="tab_home">Home</string>



    // text fields main
    <string name="balance">Balance</string>
    <string name="cash">Cash</string>
    <string name="cards">Cards</string>
    <string name="deposits">Deposits</string>
    <string name="debts">Debts</string>
    <string name="sum">Sum</string>
    <string name="report">Report</string>
    <string name="period">Period</string>
    <string name="income">Income</string>
    <string name="cost">Expense</string>



    // add accounts, debts,  transactions activities text fields
    <string name="name">Name</string>
    <string name="account_type">Account type</string>

    <string name="currency">Currency</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="account">Account</string>

    <string name="account_from">From account</string>
    <string name="account_to">To account</string>
    <string name="exchange">Exchange rate</string>

    <string name="deadline">Deadline</string>



    // warnings and alarms (dialogs, toasts etc.)

    <string name="dialog_text_main_no_accounts">To get started add your accounts</string>

    <string name="empty_amount_field">Type amount</string>
    <string name="empty_name_field">Type name</string>
    <string name="empty_exchange_field">Type rate</string>

    <string name="no_account">No accounts!</string>

    <string name="account_name_exist">Account with the same name already exists. Try another one</string>
    <string name="snack_account_list">Long press on item to edit account</string>

    <string name="dialog_text_delete_account">Account will be deleted!</string>
    <string name="dialog_title_delete">Delete</string>

    <string name="account_empty_list">Your accounts will be here</string>
    <string name="transaction_empty_list">Your transactions will be here</string>
    <string name="debt_empty_list">Your debts will be here</string>

    <string name="not_enough_costs">Not enough costs in account</string>

    <string name="dialog_text_transaction_no_account">You must have at least one account for transactions</string>
    <string name="dialog_text_transfer_no_accounts">You must have at least two accounts for transfer</string>

    <string name="transaction_delete_warning">Removal of transaction change the account</string>

    <string name="dialog_text_debt_no_account">You must have at least one account for debts</string>

    <string name="debt_delete_warning">Removal of debt change the account</string>
    <string name="debt_no_available_accounts_warning">No available accounts</string>
    <string name="debt_sum_more_then_amount">The amount you entered more then amount of the debt</string>

    <string name="transaction_date_future">Transaction date can not be in the future</string>
    <string name="debt_deadline_past">Deadline can not be in the past</string>

    <string name="press_again_to_exit">Press again to exit</string>

    <string name="db_backup_to">Data backup to</string>

    <string name="no_data_yet">No data</string>



    // etc.
    <string name="main_balance_menu_exchange">Convert all costs to selected currency</string>
    <string name="main_balance_menu_show_only_integers">Show only integer values on graphs</string>


    // transaction categories
    <string name="add_category">Add category</string>
    <string name="edit_category">Edit category</string>
    <string name="category_name_exist">Category with the same name already exists. Try another one</string>
    <string name="category_delete_warning">Are you sure you want to delete this category?</string>


    //FAQ
    <string name="faq_about_app">
        Multi-currency application for your private accounting.
    </string>
    <string name="faq_about_accounts">
        To start working with FinU you need to add your accounts.
        Specify amount, name, type (cash, card, deposit), currency.
        You can see your accounts in Accounts tab.
        Call context menu (long press on item) to edit/delete account.
    </string>
    <string name="faq_about_transactions">
        Expenses/incomes.
        You must have at least one account for transactions.
        Red button - expense, green button - income.
        Specify amount, account, category and date.
        If you have 2 or more accounts, you can transfer costs between accounts (blue button).
        Specify amount, account from and account to.
        If costs on accounts in different currencies, additionally appears exchange rate field.
        If you need you can change value in this field.
        You can see your expenses and incomes in Transactions tab.
        Call context menu (long press on item) to edit/delete transaction.
    </string>
    <string name="faq_about_debts">
        If you give money (green button) - costs are deducted from the account, if you take (red button) – costs are added to the account.
        Specify amount, name, account, and deadline.
        Debts displayed in list like Accounts and Transactions.
        The scale at the bottom of each debt showing its current status (how much percent of debt remains and must be paid).
        Call context menu to see next items: pay whole debt, pay part of debt, increase debt amount, edit, delete.
    </string>
    <string name="faq_about_home">
        Primary information about accounts, debts (Balance) and transactions (Report).
        Balance. Chart displays sum of costs, group by type (cash, cards, deposits, debts) and currency, which selected from dropdown list.
        If you click on icon to right above the chart, will appear settings dialog.
        If check `Convert all money to selected currency` chart will be display sum of accounts in all currencies group by type.
        Report. Chart displays sum of all expenses and incomes for the selected period (day, week, month, year),
        bind with currency which selected in Balance.
        Also you can change chart type.
    </string>


    //about
    <string name="general_info">General information</string>
    <string name="about_app_version">version</string>
    <string name="about_app_developer">Android Collider © 2015–2017</string>

    <string name="about_app_rates_source">Exchange rates source:</string>
    <string name="about_app_rates_source_link"><a href="www.minfin.com.ua/currency/">http://www.minfin.com.ua/currency/</a></string>

    <string name="about_app_mail_to_dev"><a href="mailto:android.collider@gmail.com">android.collider@gmail.com</a></string>






    //string arrays

    <string-array name="transaction_category_expense_array">
        <item>Food</item>
        <item>Transport</item>
        <item>Clothing</item>
        <item>Fun</item>
        <item>Gifts</item>
        <item>Health</item>
        <item>Education</item>
        <item>Electronics</item>
        <item>Other</item>
    </string-array>


    <string-array name="transaction_category_income_array">
        <item>Salary</item>
        <item>Freelance</item>
        <item>Profit</item>
        <item>Other</item>
    </string-array>


    <string-array name="account_type_array">
        <item>Cash</item>
        <item>Card</item>
        <item>Deposit</item>
    </string-array>


    <string-array name="account_currency_array">
        <item>UAH</item>
        <item>USD</item>
        <item>EUR</item>
        <item>RUB</item>
        <item>GBP</item>
    </string-array>


    <string-array name="account_currency_array_language">
        <item>hrn</item>
        <item>$</item>
        <item>€</item>
        <item>rub</item>
        <item>£</item>
    </string-array>


    <string-array name="main_statistic_period_array">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>All</item>
    </string-array>


    <string-array name="chart_type_array">
        <item>Bar</item>
        <item>Pie</item>
    </string-array>


    <string-array name="json_rates_array">
        <item>usd</item>
        <item>eur</item>
        <item>rub</item>
        <item>gbp</item>
    </string-array>


    <string-array name="navigation_drawer_string_array">
        <item>@string/tab_home</item>
        <item>@string/tab_transactions</item>
        <item>@string/tab_accounts</item>
        <item>@string/debts</item>
        <item>@string/transaction_categories</item>
        <item>@string/settings</item>
        <item>@string/app_faq</item>
        <item>@string/app_about</item>
    </string-array>



</resources>
