<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_item_home"
            android:icon="@drawable/ic_view_dashboard_blue_gray_24dp"
            android:title="@string/tab_home" />
        <item
            android:id="@+id/drawer_item_transactions"
            android:icon="@drawable/ic_contrast_box_blue_gray_24dp"
            android:title="@string/tab_transactions" />

        <item
            android:id="@+id/drawer_item_accounts"
            android:icon="@drawable/ic_clipboard_text_blue_gray_24dp"
            android:title="@string/tab_accounts" />

        <item
            android:id="@+id/drawer_item_debts"
            android:icon="@drawable/ic_debt_blue_gray_24dp"
            android:title="@string/debts" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/drawer_item_transaction_categories"
            android:icon="@drawable/ic_more_blue_gray_48dp"
            android:title="@string/transaction_categories" />

        <item
            android:id="@+id/drawer_item_settings"
            android:icon="@drawable/ic_settings_blue_gray_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/drawer_item_faq"
            android:icon="@drawable/ic_help_circle_blue_gray_24dp"
            android:title="@string/app_faq" />

        <item
            android:id="@+id/drawer_item_about_app"
            android:icon="@drawable/ic_information_blue_gray_24dp"
            android:title="@string/app_about" />
    </group>
</menu>