<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@drawable/database_export_outline"
        android:key="export_db"
        android:summary="@string/export_db_summary"
        android:title="@string/export_db" />

    <Preference
        android:icon="@drawable/database_import_outline"
        android:key="import_db"
        android:summary="@string/import_db_summary"
        android:title="@string/import_db" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:icon="@drawable/update"
        android:key="@string/update_rates_automatically"
        android:title="@string/update_rates_automatically" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:icon="@drawable/theme_light_dark"
        android:key="@string/night_theme"
        android:title="@string/night_theme" />
</androidx.preference.PreferenceScreen>