<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_marginTop="@dimen/common_padding_large"
    android:paddingLeft="@dimen/common_padding_medium"
    android:paddingRight="@dimen/common_padding_medium"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardFAQApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardElevation="@dimen/elevation_small"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_large">

                <TextView
                    android:id="@+id/tvFAQAppHead"
                    style="@style/TitleFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/general_info" />

                <TextView
                    android:id="@+id/tvFAQAppBody"
                    style="@style/BodyFontSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvFAQAppHead"
                    android:layout_marginTop="@dimen/common_padding_medium"
                    android:text="@string/faq_about_app"
                    android:visibility="gone" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardFAQAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardFAQHome"
            card_view:cardElevation="@dimen/elevation_small"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_large">

                <TextView
                    android:id="@+id/tvFAQAccountsHead"
                    style="@style/TitleFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_accounts" />

                <TextView
                    android:id="@+id/tvFAQAccountsBody"
                    style="@style/BodyFontSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvFAQAccountsHead"
                    android:layout_marginTop="@dimen/common_padding_medium"
                    android:text="@string/faq_about_accounts"
                    android:visibility="gone" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardFAQTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardFAQAccounts"
            card_view:cardElevation="@dimen/elevation_small"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_large">

                <TextView
                    android:id="@+id/tvFAQTransactionsHead"
                    style="@style/TitleFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_transactions" />

                <TextView
                    android:id="@+id/tvFAQTransactionsBody"
                    style="@style/BodyFontSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvFAQTransactionsHead"
                    android:layout_marginTop="@dimen/common_padding_medium"
                    android:text="@string/faq_about_transactions"
                    android:visibility="gone" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardFAQDebts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardFAQTransactions"
            card_view:cardElevation="@dimen/elevation_small"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_large">

                <TextView
                    android:id="@+id/tvFAQDebtsHead"
                    style="@style/TitleFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/debts" />

                <TextView
                    android:id="@+id/tvFAQDebtsBody"
                    style="@style/BodyFontSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvFAQDebtsHead"
                    android:layout_marginTop="@dimen/common_padding_medium"
                    android:text="@string/faq_about_debts"
                    android:visibility="gone" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardFAQHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardFAQApp"
            card_view:cardElevation="@dimen/elevation_small"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_large">

                <TextView
                    android:id="@+id/tvFAQHomeHead"
                    style="@style/TitleFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_home" />

                <TextView
                    android:id="@+id/tvFAQHomeBody"
                    style="@style/BodyFontSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvFAQHomeHead"
                    android:layout_marginTop="@dimen/common_padding_medium"
                    android:text="@string/faq_about_home"
                    android:visibility="gone" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>