<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.androidcollider.easyfin.main.MainFragment">
        <action
            android:id="@+id/action_mainFragment_to_addAccountFragment"
            app:destination="@id/addAccountFragment" />
    </fragment>
    <fragment
        android:id="@+id/addTransactionIncomeExpenseFragment"
        android:name="com.androidcollider.easyfin.transactions.add_edit.income_expense.AddTransactionIncomeExpenseFragment"
        android:label="@string/transactions">
        <action
            android:id="@+id/action_addTransactionIncomeExpenseFragment_to_numericDialogFragment"
            app:destination="@id/numericDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/addTransactionBetweenAccountsFragment"
        android:name="com.androidcollider.easyfin.transactions.add_edit.btw_accounts.AddTransactionBetweenAccountsFragment">
        <action
            android:id="@+id/action_addTransactionBetweenAccountsFragment_to_numericDialogFragment"
            app:destination="@id/numericDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/addAccountFragment"
        android:name="com.androidcollider.easyfin.accounts.add_edit.AddAccountFragment"
        android:label="@string/new_account">
        <action
            android:id="@+id/action_addAccountFragment_to_numericDialogFragment"
            app:destination="@id/numericDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_debts"
        android:name="com.androidcollider.easyfin.debts.list.DebtsFragment"
        android:label="@string/debts">
        <action
            android:id="@+id/action_debtsFragment_to_addDebtFragment"
            app:destination="@id/addDebtFragment" />
        <action
            android:id="@+id/action_debtsFragment_to_payDebtFragment"
            app:destination="@id/payDebtFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionCategoriesRootFragment"
        android:name="com.androidcollider.easyfin.transaction_categories.root.TransactionCategoriesRootFragment"
        android:label="@string/transaction_categories" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.androidcollider.easyfin.common.ui.fragments.PrefFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/FAQFragment"
        android:name="com.androidcollider.easyfin.faq.FAQFragment"
        android:label="@string/app_faq" />
    <fragment
        android:id="@+id/addDebtFragment"
        android:name="com.androidcollider.easyfin.debts.add_edit.AddDebtFragment"
        android:label="@string/debts">
        <action
            android:id="@+id/action_addDebtFragment_to_numericDialogFragment"
            app:destination="@id/numericDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/payDebtFragment"
        android:name="com.androidcollider.easyfin.debts.pay.PayDebtFragment"
        android:label="@string/debts">
        <action
            android:id="@+id/action_payDebtFragment_to_numericDialogFragment"
            app:destination="@id/numericDialogFragment" />
    </fragment>
    <dialog
        android:id="@+id/numericDialogFragment"
        android:name="com.androidcollider.easyfin.common.ui.fragments.NumericDialogFragment" />
</navigation>